add two PM charts on main page

--- a/templates/index.html
+++ b/templates/index.html
@@ -62,8 +62,13 @@
         </div>
 
         <div class="chart-container">
-            <h2>Wilgotność</h2>
-            <img src="data:image/png;base64,{{ chart_humidity }}" alt="Wilgotność">
+            <h2>PM2_5</h2>
+            <img src="data:image/png;base64,{{ chart_pm2_5 }}" alt="PM2_5">
+        </div>
+
+        <div class="chart-container">
+            <h2>PM10</h2>
+            <img src="data:image/png;base64,{{ chart_pm10 }}" alt="PM10">
         </div>
     </div>
 </body>
